--- a/hafalquran.css
+++ b/hafalquran.css
@@ -1,58 +1,44 @@
-/*!
- * Start Bootstrap - Creative v3.3.7+1 (http://startbootstrap.com/template-overviews/creative)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
-    .btn { border-radius:3; font-family: 'Open Sans', Helvetica, Arial, sans-serif;} 
-     .btn:hover {border-radius:3;} 
+section{  position:relative;  z-index:0; }  
+ @media (min-width:992px){
+.section-inner{margin:20px auto 0}
+ }
+.section-inner p{margin-bottom:0}
+#Profile, #Bisa, #Pro, #Biaya, #Testimonial, #perta, #Galeri, #artikel, #spn, #Kontak {}
+#Profile{min-height:520px;  padding:80px 0px 50px 0px;}
+#Bisa{min-height:260px;  padding:30px 0px 20px 0px;}
+#Pro{min-height:460px;  padding:50px 0px 40px 0px;}
+#Biaya{min-height:360px;  padding:50px 0px 50px 0px;}
+#Testimonial{}
+#perta {min-height:560px;  padding:50px 0px 50px 0px;}
+#Galeri {min-height:560px;  padding:53px 0px 50px 0px;}
+ .portfolio-box{position:relative;display:block;max-width:650px;margin:0 auto}
+ .portfolio-box .portfolio-box-caption{color:#fff;opacity:0;background-color: rgba(0, 0, 0, 0.5);position:absolute;bottom:0;text-align:center;width:100%;height:100%;transition:all .15s}
+ .portfolio-box .portfolio-box-caption .portfolio-box-caption-content{width:100%;text-align:center;position:absolute;top:50%;transform:translateY(-50%)}
+ .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
+ .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name{font-family:'Open Sans','Helvetica Neue',Arial,sans-serif;padding:0 15px}
+ .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category{text-transform:capitalize;font-weight:600;font-size:14px}
+ .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name{font-size:18px}
+ .portfolio-box:hover .portfolio-box-caption{opacity:1}.portfolio-box:focus{outline:0}
+ @media (min-width:768px){
+ .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category{font-size:16px}
+ .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name{font-size:22px}
+ }
+ .call-to-action h2{margin:0 auto 20px}
+ .text-primary{color:#F05F40}
+ .no-gutter>[class*=col-]{padding-right:0;padding-left:0}
  
-	   .btnTrans{border-radius:2px ;font-weight:500;text-transform:capital; border:2px solid #fff; background-color: rgba(0, 0, 0, 0);}
-   .btnTrans:hover{border-radius:2px; text-transform:capital; border:1px solid #fff; color:#333333; background:#ffffff; text-decoration:none;}
-    a.btnTrans {color:#fff; font-size:23px; } 
-	  a.btnTrans:focus {color:#333; font-size:23px;text-decoration:none;} 
-  .btnTrans-size-1 {padding:14px 31px 16px 31px;} 
- 
-  p, b, h1, h3, h2, h4 {font-family: 'Open Sans', Helvetica, Arial, sans-serif;}
+#artikel {}
+#spn {}
+#Kontak {min-height:615px;  padding:70px 0px 20px 0px;}
+#Kontak a { color:#FFFFFF;}
+@media (max-width: 476px) {#Kontak {min-height:315px;  padding:30px 0px 20px 0px;}}
 
-
- hr{border-color:#F05F40;border-width:1px; max-width:55%;}
- hr.primary, hr.light{border-color:#fff; border-width:1px; max-width:55%;}
- 
- section{padding:80px 0px 80px 0px; position:relative;  z-index:0; }  
- a{transition:all .135s;color:#3366CC}
- a:focus,a:hover{color:#3366CC}
- 
- .bg-primary{background-color:#F05F40}
- .bg-dark{background-color:#222;color:#fff}
- .white{color:#fff; text-shadow: 1px 1px 1px rgba(7, 9, 11, 0.52);}
-  .lighter {color: #E6E6E6; text-shadow: 1px 1px 1px rgba(7, 9, 11, 0.52);}
-    .color6 {color: #666666;}
-  .midark {color: #3C3C3C;}
-   midark:hover {color:#333333;}
- .fdark {color: #2A2A2A;}
- .fdarker { color: #232323; }
- .collapsed {font-size:16px;}
- .apabisa {text-transform:capitalize; width:100%; font-size:16px; font-weight:700; color:#FFFFFF;}	 
-  #accordion .panel, .panel-body,  .panel-heading {border-radius: 0;}
- 
-.panel-heading {
-    padding: 1px 15px;}
-	
-	
- 
- .no-padding{padding:0}
- .windows, .bg1,  .bg2{ background-color: #000;
--webkit-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.34);
+.windows, .bg1,  .bg2{ background-color: #000;-webkit-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.34);
 -moz-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.34);
 box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.34);}
 
-
-
 .bgc {
-    /* Full height */
-   min-height: 300px;
-
-    /* Create the parallax scrolling effect */
+    min-height: 300px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -66,118 +52,99 @@ box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.34);}
     background: transparent;
 }
  
+a{transition:all .135s;color:#3366CC}
+a:focus,a:hover{color:#3366CC} 
+
+.bg-primary{background-color:#F05F40}
+.bg-dark{background-color:#222;color:#fff}
+.white{color:#fff; text-shadow: 1px 1px 1px rgba(7, 9, 11, 0.52);}
+.lighter {color: #E6E6E6; text-shadow: 1px 1px 1px rgba(7, 9, 11, 0.52);}
+.color6 {color: #666666;}
+.midark {color: #3C3C3C;}
+midark:hover {color:#333333;}
+.fdark {color: #2A2A2A;}
+.fdarker { color: #232323; }
+
+.collapsed {font-size:16px;}
+#accordion .panel, .panel-body,  .panel-heading {border-radius: 0;}
  
-}
+.panel-heading {padding: 1px 15px;}	
+.no-padding{padding:0}
 
 .sponsor {height:160px;    margin:0; right:0; left:0;  background-color:#F05F40; padding:0;}
 .sponsor-item{height:160px; padding:10px 0 10px 0 ; margin:0; right:0; left:0;   background-color:#F05F40;}
 #Gale {padding-top:10px; padding-bottom:10px;}
-  #map {padding:0;} #map .map{  display:block; width:100%;}
+ 
+
 #Garis {min-height:20px; background-color:#333; padding:0;}
-#Kontak {min-height:620px;}
- #Kontak a { color:#FFFFFF;}
-.bgMinheight {min-height:350px;}
-#Map {min-height:41px; padding:20px 0px 50px 0px;}
-#Footer {min-height:100px; padding:0; margin:0; left:0; right:0; top:0; bottom:0; background-color:#333; border-radius:0;}
+
+
+ 
+
+#footer {max-height:250px; padding:0; margin:0; left:0; right:0; top:0; bottom:0; background-color:#333; border-radius:0;}
+.mapcontainer {border-radius:0; height:100%; background-color:#333;}
+.mapcontainer a {color:#fff;}
+.hfqmap {min-height:300px; width:100%;}
+
+.panel {padding:0;}
 .panel-info > .panel-heading {
     color: #31708f;
     background-color: #ffffff;
     border-color: #bce8f1;
 }
-  .coversec {  height: 100%; width:100%:
-  position: relative;
+.coversec {height: 100%; width:100%:  position: relative;}
+.coversec coverlay {transform: translate(0%, 0%); position: absolute;  
+top: 0%;  left: 0%;  right: 0;  bottom: 0; width:100%; height:100%;  z-index: -4; background-color: rgba(0, 0, 0, 0.70);}
+.btn-A {
+   position: absolute; z-index: 4;
+    bottom: 40px;
+    margin:auto 0;
+    
 }
 
-  .coversec coverlay {  
- transform: translate(0%, 0%);
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  right: 0;
-  bottom: 0;
- width:100%;
- height:100%;  
-  z-index: -4;
-  background-color: rgba(0, 0, 0, 0.70);}
+.xxx {display:none}
 
- .navbar-default{background-color:#fff;border-color:rgba(34,34,34,.05);transition:all .335s}
- a.navbar-brand {  font-weight:700; font-size:24px; color:#ffffff; }
-  a.navbar-brand:hover {  font-weight:700; font-size:24px; color: #DDDDDD; }
- .navbar-brand.active>a:focus {  font-weight:700; font-size:21px; }
- .navbar-default.affix .navbar-header .navbar-brand{color:#F05F40;font-size:21px;}
- 
- .navbar-default .navbar-header .navbar-toggle{ font-size:17px; text-transform:capitalize}
- .navbar-default .nav>li>a,.navbar-default .nav>li>a:focus{text-transform:capitalize; font-size:17px; }
- .navbar-default .nav>li>a:focus:hover,.navbar-default .nav>li>a:hover{color:#DDDDDD;background-color: #fff;}
- .navbar-default .nav>li.active>a,.navbar-default .nav>li.active>a:focus{color:#666!important;background-color: #fff;}
-  .nav>navbar.active {
-    -moz-box-shadow:0 1px 5px rgba(0, 0, 0, 0.15);
-     -webkit-box-shadow: 0 1x 5px rgba(0, 0, 0, 0.15);
-     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
-	 
- @media (min-width:768px){.navbar-default{background-color:transparent;border-color:rgba(255,255,255,.3)}
- .navbar-default .navbar-header .navbar-brand{color:rgba(255,255,255,.7)}
- .navbar-default .navbar-header .navbar-brand:focus,.navbar-default .navbar-header .navbar-brand:hover{color:#fff}
- .navbar-default .nav>li>a,.navbar-default .nav>li>a:focus{color:rgba(255,255,255,.7)}
- .navbar-default .nav>li>a:focus:hover,.navbar-default .nav>li>a:hover{color:#fff}
- .navbar-default.affix{background-color:#fff;border-color:rgba(34,34,34,.05)}
- .navbar-default.affix .navbar-header .navbar-brand:focus,.navbar-default.affix .navbar-header .navbar-brand:hover{color:#eb3812}
- .navbar-default.affix .nav>li>a,.navbar-default.affix .nav>li>a:focus{color:#222}
- .navbar-default.affix .nav>li>a:focus:hover,.navbar-default.affix .nav>li>a:hover{color:#F05F40}}
 
- header .header-content{padding:100px 15px}
- header .header-content .header-content-inner h1{font-weight:700;text-transform:capitalize;margin-top:0;margin-bottom:0;font-size:30px}
- header .header-content .header-content-inner hr{margin:30px auto}
- header .header-content .header-content-inner p{font-weight:300;color:rgba(255,255,255,.7);font-size:16px;margin-bottom:50px}
+
+hr{border-color:#F05F40;border-width:1px; max-width:55%;}
+
+hr.primary, hr.light{border-color:#fff; border-width:1px; max-width:55%;}
+
+
  
- @media (min-width:768px){
- header{min-height:100%}header .header-content{position:absolute;top:50%;-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%);padding:0 50px}header .header-content .header-content-inner{max-width:1000px;margin-left:auto;margin-right:auto}
- header .header-content .header-content-inner h1{font-size:50px}
- header .header-content .header-content-inner p{font-size:18px;max-width:80%;margin-left:auto;margin-right:auto}}
- .section-heading{margin-top:0}.service-box{max-width:400px;margin:50px auto 0}
+.btn { border-radius:3; font-family: 'Open Sans', Helvetica, Arial, sans-serif;} 
+
+.btn:hover {border-radius:3;} 
  
+.btnTrans{border-radius:2px ;font-weight:500;text-transform:capital; border:2px solid #fff; background-color: rgba(0, 0, 0, 0);}
+
+.btnTrans:hover{border-radius:2px; text-transform:capital; border:1px solid #fff; color:#333333; background:#ffffff; text-decoration:none;}
+
+a.btnTrans {color:#fff; font-size:23px; } 
+
+a.btnTrans:focus {color:#333; font-size:23px;text-decoration:none;} 
+
+.btnTrans-size-1 {padding:14px 31px 16px 31px;} 
  
+p, b, h1, h3, h2, h4 {font-family: 'Open Sans', Helvetica, Arial, sans-serif;}
  
 /* mobile */
  .absolute {position:absolute; right:0;}
-  @media (max-width: 476px) {.absolute {position:relative; } }
+@media (max-width: 476px) {.absolute {position:relative; } }
  #mymobile {width:100%; height:100%; display:block; position:relative; top:10px;} 
  .mbbg { position:relative;}
  .mobilecontainer { width:100%;  position:absolute; left:0px; top:0px; border:2px dotted #transparent;}
  .mobilecontent{ z-index:1; padding:31px 17px 0 17px; margin:20px; text-align:left;  height:100%; ;}
  .contentsided{border:1px solid #ddd; display:block; width:100%; height:100%;  overflow:hidden; max-height:613px; }
 @media (max-width:768px){.mobilecontent{ z-index:1; padding:71px 37px 0 37px;} .contentsided { height:750px;}} 
- @media (min-width:992px){.mobilecontent{ z-index:1; padding:61px 27px 0 27px;} .contentsided { height:690px;}} 
- @media (max-width:1024px){.mobilecontent{ z-index:1; padding:80px 37px 0 37px;} .contentsided { height:550px;}}
- @media (max-width: 476px) {.mobilecontent{ z-index:1; padding:25px 13px 0 13px;} .contentsided { height:339px;} }
+@media (min-width:992px){.mobilecontent{ z-index:1; padding:61px 27px 0 27px;} .contentsided { height:690px;}} 
+@media (max-width:1024px){.mobilecontent{ z-index:1; padding:80px 37px 0 37px;} .contentsided { height:550px;}}
+@media (max-width: 476px) {.mobilecontent{ z-index:1; padding:25px 13px 0 13px;} .contentsided { height:290px;} }
 
- @media (min-width:992px){
- .service-box{margin:20px auto 0}
- }
+
  .noborder {border-radius:0;}
- .service-box p{margin-bottom:0}
- .portfolio-box{position:relative;display:block;max-width:650px;margin:0 auto}
- .portfolio-box .portfolio-box-caption{color:#fff;opacity:0;display:block;background:rgba(240,95,64,.9);position:absolute;bottom:0;text-align:center;width:100%;height:100%;transition:all .35s}
- 
- .portfolio-box .portfolio-box-caption .portfolio-box-caption-content{width:100%;text-align:center;position:absolute;top:50%;transform:translateY(-50%)}
- 
- .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
- .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name{font-family:'Open Sans','Helvetica Neue',Arial,sans-serif;padding:0 15px}
- 
- .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category{text-transform:capitalize;font-weight:600;font-size:14px}
- .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name{font-size:18px}
- .portfolio-box:hover .portfolio-box-caption{opacity:1}.portfolio-box:focus{outline:0}
- 
- @media (min-width:768px){
- 
- .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category{font-size:16px}
- .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name{font-size:22px}
- 
- }
- .call-to-action h2{margin:0 auto 20px}
- .text-primary{color:#F05F40}
- .no-gutter>[class*=col-]{padding-right:0;padding-left:0}
- 
+
+
 
 	 
  ::-moz-selection{color:#fff;text-shadow:none;background:#222}
@@ -262,6 +229,5 @@ ul.e {list-style-type: none;text-decoration:none;  padding:0;}
 		}
 .form-control {
   		  border-radius:0px; 
-}
 }
  
